--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -62,6 +62,7 @@ header {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 70%;
   padding-top: 30px;
   padding-right: 40px;
   padding-left: 40px;
@@ -72,6 +73,7 @@ header {
 #select-players {
   display: flex;
   width: 100%;
+  height: 8vw;
   justify-content: space-between;
 }
 
@@ -155,21 +157,37 @@ header {
 
 .crown {
   position: absolute;
-  top: -19px;
-  right: 2px;
-  height: 30px;
-  transform: rotate(28deg);
+  /* top: -19px; */
+  /* top: -20%; */
+  top: -1.3vw;
+  /* right: 2px; */
+  right: 2%;
+  right: 0.25vw;
+  /* height: 30px; */
+  height: 1.8vw;
+  transform: rotate(25deg);
 }
 
 #select-players .player.myPiece .crown {
-  top: -23px;
-  right: -5px;
+  /* top: -23px; */
+  top: -28%;
+  top: -1.5vw;
+  /* right: -5px; */
+  right: -4%;
+  right: -0.2vw;
 }
+
+/* #chosen-language .crown {
+  top: -20%;
+  right: 3%;
+} */
+
 
 #play .crown,
 #next-btn .crown {
-  top: -21px;
-  right: -17px;
+  height: 30px;
+  top: -22px;
+  right: -16px;
 }
 
 /* §§ middle section of start menu */
@@ -177,6 +195,7 @@ header {
 #start-menu-main {
   display: flex;
   width: 100%;
+  flex-grow: 1;
   justify-content: space-between;
 }
 /* select language of word cards: */
@@ -185,13 +204,15 @@ header {
   display: flex;
   align-items: center;
   /* justify-content: center; */
-  width: 340px;
+  width: 30%;
 }
 
 #chosen-language {
   position: relative;
-  height: 110px;
-  width: 110px;
+  /* height: 110px; */
+  /* width: 110px; */
+  height: 6vw;
+  width: 6vw;
   margin: 5px;
 
   -webkit-transition: transform 0.4s ease-out;
@@ -217,27 +238,29 @@ header {
 
 /* §§ stuff-logo styles */
 #logo-button-box {
-  height: 435px;
-  width: 340px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 30%;
 }
 
 .stuff-logo {
-  padding-top: 4rem;
-  padding-right: 2rem;
-  padding-left: 2rem;
+  padding: 10% 8%;
   /* font-family: "Life Savers", cursive; */
   text-align: center;
 }
 
 .stuff-logo h1 {
   font-size: 8rem;
+  font-size: 13.2vh;
   font-weight: 800;
   margin-top: 0;
-  margin-bottom: 1.2rem;
+  margin-bottom: 0;
 }
 
 .stuff-logo h2 {
-  font-size: 5rem;
+  /* font-size: 5rem; */
+  font-size: 8.3vh;
   font-weight: 700;
   margin-top: 0;
   margin-bottom: 0;
@@ -248,6 +271,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-grow: 1;
 }
 
 button {
@@ -300,7 +324,8 @@ button:focus {
   bottom: 0px;
   width: 100%;
   overflow-x: hidden;
-  height: 300px;
+  /* height: 300px; */
+  height: 30%;
 }
 
 #ticker-objects {
@@ -312,7 +337,8 @@ button:focus {
   left: 0;
   white-space: nowrap;
   font-size: 0; /* to remove white space between the ticker elements, that causes ticker to jump in the first round*/
-  height: 300px;
+  /* height: 300px; */
+  height: 30vh;
 }
 
 #ticker-objects .img-box img:hover {
@@ -413,8 +439,10 @@ button:focus {
 }
 
 #joined-players .player.myTurn .crown {
-  top: -22px;
-  right: -16px;
+  /* top: -22px;
+  right: -16px; */
+  top: -1.3vw;
+  right: -0.9vw;
 }
 
 #joined-players .player.myPiece {
@@ -423,8 +451,6 @@ button:focus {
   border-width: 8px;
   /* height: 115px; */
   /* width: 115px; */
-  /* height: 12vh; */
-  /* width: 12vh; */
   height: 7vw;
   width: 7vw;
   /* border-style: solid;
@@ -432,8 +458,10 @@ button:focus {
 }
 
 #joined-players .player.myPiece .crown {
-  top: -24px;
-  right: -6px;
+  /* top: -24px;
+  right: -6px; */
+  top: -1.5vw;
+  right: -0.08vw;
 }
 
 #joined-players .player.myTurn.myPiece .crown {
