--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -19,11 +19,8 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  /* min-height: 100vh; */
   height: 100%;
-  /* min-height: 950px; */
   width: 100%;
-  /* min-width: 1820px; */
   margin: 0;
   padding: 0;
   /* font-size: 26px; */
@@ -52,7 +49,6 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  /* height: 100vh; */
   height: 100%;
   width: 100%;
   z-index: 100;
@@ -63,9 +59,9 @@ header {
   flex-direction: column;
   width: 100%;
   height: 70%;
-  padding-top: 30px;
-  padding-right: 40px;
-  padding-left: 40px;
+  padding-top: 2%;
+  padding-right: 1.5vw;
+  padding-left: 1.5vw;
   font-family: "Life Savers", cursive;
   align-items: center;
 }
@@ -94,14 +90,12 @@ header {
 }
 
 #main-game {
-  /* height: 100vh; */
   height: 100%;
   width: 100%;
   display: flex;
   flex-shrink: 0;
   /* align-items: flex-end; */
   position: relative;
-  /* padding-bottom: 100px; */
 }
 
 #main-left-center {
@@ -113,23 +107,21 @@ header {
   height: 91%;
   /* width: 60%; */
   width: 63vw;
-  /* justify-content: space-between; */
   /* justify-content: flex-end; */
   justify-content: center;
 }
 
 #main-right {
   display: flex;
-  /* flex-direction: column; */
   /* flex-grow: 1; */
   flex-shrink: 0;
   height: 91%;
   /* width: 40%; */
   width: 37vw;
-  /* justify-content: space-between; */
   padding: 8px;
   /* align-items: flex-end; */
   align-items: center;
+  /* justify-content: space-between; */
 }
 
 #card-points-construction {
@@ -154,75 +146,59 @@ header {
 
 #construction-area {
   position: relative;
-  /* bottom: 112px;
-    right: 632px; */
-  height: 38vw;
-  width: 36vw;
-  /* padding: 4px; */
-  /* border: 3px lightgrey dashed; */
-  border-width: 0.15vw;
-  border-style: dashed;
-  /* border-radius: 20px; */
-  border-radius: 1.3vw;
-  /* margin-left: 6px; */
-  /* background-color: rgba(211, 211, 211, 0.5); */
   display: flex;
   justify-content: center;
+  height: 38vw;
+  width: 36vw;
+  border-width: 0.15vw;
+  border-style: dashed;
+  border-radius: 1.3vw;
   align-items: flex-end;
   flex-shrink: 0;
 }
 
 #objects {
-  flex-shrink: 0;
+  position: relative;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  /* position: absolute;
-    bottom: 102px;
-    right: 0; */
-  position: relative;
   height: 47vw;
   width: 100%;
-  padding: 3px;
-  /* border: 3px lightgrey dashed; */
+  flex-shrink: 0;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 0.15vw;
   border: 0.15vw lightgrey dashed;
-  /* border-radius: 10px; */
   border-radius: 1.3vw;
-  /* margin-right: 12px; */
-  /* margin-bottom: 10px; */
 }
 #queue {
+  position: absolute;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: 9%;
-  /* background-color: rgba(0, 0, 0, 0.5); */
-  /* border-top: 3px black dashed; */
+  bottom: 0;
+  justify-content: flex-end;
   border-top: 0.15vw black dashed;
-  padding: 2px 8px;
+  padding: 0.2% 1%;
 }
 
 #queue-overlay {
   position: absolute;
-  bottom: 0;
   height: 9%;
   width: 100%;
+  bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 1000;
 }
 
 #game-end {
   position: absolute;
-  top: 0;
-  left: 0;
+  display: flex;
   height: 100%;
   width: 100%;
+  top: 0;
+  left: 0;
   z-index: 100;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -234,23 +210,20 @@ header {
 /* §§ ----------OBJECT TICKER------------------ */
 #ticker {
   position: fixed;
-  bottom: 0px;
+  bottom: 0%;
   width: 100%;
   overflow-x: hidden;
-  /* height: 300px; */
   height: 30%;
 }
 
 #ticker-objects {
+  position: fixed;
   display: flex;
   align-items: center;
-  position: fixed;
-  /* position: absolute; */
   bottom: 0px;
   left: 0;
   white-space: nowrap;
   font-size: 0; /* to remove white space between the ticker elements, that causes ticker to jump in the first round*/
-  /* height: 300px; */
   height: 30vh;
 }
 
@@ -323,15 +296,10 @@ header {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  /* height: 110px; */
-  /* width: 110px; */
-  /* height: 12vh; */
-  /* width: 12vh; */
   height: 6.5vw;
   width: 6.5vw;
-  /* border: 3px dashed transparent; */
+  justify-content: center;
+  align-items: center;
   border: 0.15vw dashed transparent;
   border-radius: 50%;
   font-weight: bold;
@@ -362,51 +330,45 @@ header {
 /* font sizes depending on length of player name: */
 .player.name4 .player-name {
   /* font-size: 34px; */
-  /* font-size: 3.5vh; */
-      font-size: 2vw;
+  font-size: 2vw;
 }
 
 .player.name6 .player-name {
   /* font-size: 30px; */
-  /* font-size: 3.1vh; */
-  font-size: 1.8vw;
+  font-size: 1.7vw;
 }
 
 .player.name8 .player-name {
   /* font-size: 24px; */
-  /* font-size: 2.6vh; */
   font-size: 1.4vw;
 }
 
 .player.name10 .player-name {
   /* font-size: 20px; */
-  /* font-size: 2.1vh; */
   font-size: 1.15vw;
 }
 
 .player.name12 .player-name {
   /* font-size: 16px; */
-  /* font-size: 1.8vh; */
   font-size: 1vw;
 }
 
 #select-players .player.myPiece {
   transform: scale(1.2);
   border-style: double;
-  /* border-width: 8px; */
   border-width: 0.45vw;
 }
 
 #joined-players .player,
 #select-players .player {
-  margin: 5px;
+  margin: 0.3vw;
   position: relative;
 }
 
 #joined-players .player-name,
 #players-end .player-name {
   position: relative;
-  bottom: 10px;
+  bottom: 9%;
 }
 
 #joined-players .player-points,
@@ -417,27 +379,18 @@ header {
 }
 
 #joined-players .player.myTurn {
-  /* transform: scale(1.2); */
-  /* border-style: double;
-    border-width: 6px; */
   border-style: solid;
-  /* border-width: 3px; */
   border-width: 0.15vw;
-  /* border-radius: 20px; */
+  /* more square; not round: */
   border-radius: 1.3vw;
 }
 
 #joined-players .player.myPiece {
   transform: unset;
-  border-style: double;
-  /* border-width: 8px; */
-  border-width: 0.45vw;
-  /* height: 115px; */
-  /* width: 115px; */
   height: 7vw;
   width: 7vw;
-  /* border-style: solid;
-    border-width: 3px; */
+  border-style: double;
+  border-width: 0.45vw;
 }
 
 #players-end {
@@ -445,13 +398,12 @@ header {
   display: flex;
   flex-direction: column;
   margin-right: 6vw;
-  margin-top: 9vh;
+  padding-top: 6%;
 }
 
 #players-end .player {
   border-style: solid;
   color: black;
-  /* margin: 15px 0; */
 }
 
 #players-end .player:hover {
@@ -459,11 +411,11 @@ header {
 }
 
 #players-end .player:first-child {
-  /* border-style: groove; */
   transform: scale(1.3);
-  /* border-width: 10px; */
   margin-bottom: 4vh;
   animation: pulse 2s infinite linear;
+  /* border-style: groove; */
+  /* border-width: 10px; */
 }
 
 @keyframes pulse {
@@ -503,62 +455,40 @@ header {
 }
 
 #players-end .player:nth-child(8) {
-  transform: scale(0.65) translateY(-12.4vh);
+  transform: scale(0.65) translateY(-12vh);
 }
 
 /* §§ --------CROWN / game master indicator------- */
 .crown {
   position: absolute;
-  /* top: -19px; */
-  /* top: -20%; */
-  top: -1.3vw;
-  /* right: 2px; */
-  right: 2%;
-  right: 0.25vw;
-  /* height: 30px; */
   height: 1.8vw;
+  top: -1.3vw;
+  right: 0.25vw;
   transform: rotate(25deg);
 }
 
-/* #chosen-language .crown {
-top: -20%;
-right: 3%;
-} */
-
 #select-players .player.myPiece .crown {
-  /* top: -23px; */
-  top: -28%;
   top: -1.5vw;
-  /* right: -5px; */
-  right: -4%;
   right: -0.2vw;
 }
 
 #joined-players .player.myPiece .crown {
-  /* top: -24px;
-  right: -6px; */
   top: -1.5vw;
   right: -0.08vw;
 }
 
 #joined-players .player.myTurn .crown {
-  /* top: -22px;
-  right: -16px; */
   top: -1.3vw;
   right: -0.9vw;
 }
 
 #joined-players .player.myTurn.myPiece .crown {
-  /* top: -27px; */
-  /* right: -21px; */
   top: -1.6vw;
   right: -1.2vw;
 }
 
 #play .crown,
 #next-btn .crown {
-  /* top: -22px; */
-  /* right: -16px; */
   top: -1.3vw;
   right: -0.95vw;
 }
@@ -566,11 +496,9 @@ right: 3%;
 /* §§ -------select LANGUAGE of word cards---------- */
 #chosen-language {
   position: relative;
-  /* height: 110px; */
-  /* width: 110px; */
   height: 6vw;
   width: 6vw;
-  margin: 5px;
+  margin: 0.3vw;
 
   -webkit-transition: transform 0.4s ease-out;
   -moz-transition: transform 0.4s ease-out;
@@ -585,11 +513,10 @@ right: 3%;
 
 #chosen-language img:not(.crown) {
   position: absolute;
-  top: 0;
-  left: 0;
   height: 100%;
   width: 100%;
-  /* border: 3px dashed black; */
+  top: 0;
+  left: 0;
   border: 0.15vw dashed black;
   border-radius: 50%;
 }
@@ -602,7 +529,6 @@ right: 3%;
 }
 
 .stuff-logo h1 {
-  font-size: 8rem;
   font-size: 13.2vh;
   font-weight: 800;
   margin-top: 0;
@@ -610,7 +536,6 @@ right: 3%;
 }
 
 .stuff-logo h2 {
-  /* font-size: 5rem; */
   font-size: 8.3vh;
   font-weight: 700;
   margin-top: 0;
@@ -629,16 +554,13 @@ right: 3%;
 button {
   position: relative;
   display: inline-block;
-  /* padding: 0.5rem; */
   padding: 0.4vw;
   /* font-size: 26px; */
   font-size: 1.6vw;
   text-align: center;
   color: black;
   background-color: rgba(255, 255, 255, 0);
-  /* border-radius: 8px; */
   border-radius: 0.6vw;
-  /* border: 2px solid black; */
   border: 0.1vw solid black;
   cursor: pointer;
   font-family: "Life Savers", cursive;
@@ -670,12 +592,11 @@ button:focus {
 }
 
 #done-btn {
-  margin: 0.4vw 0.4vw;
-  /* border-radius: 5px 15px 5px 15px; */
-  border-radius: 0.4vw 1vw 0.4vw 1vw;
   position: absolute;
+  border-radius: 0.4vw 1vw 0.4vw 1vw;
   left: 0vw;
   bottom: 0vw;
+  margin: 0.4vw 0.4vw;
   z-index: 1500;
 }
 
@@ -685,33 +606,29 @@ button:focus {
 }
 
 #help-btn {
-  margin: 0.4vw 0.4vw;
+  position: absolute;
   /* border-radius: 15px 5px 15px 5px; */
   border-radius: 1vw 0.4vw  1vw 0.4vw;
-  position: absolute;
   right: 0vw;
   bottom: 0vw;
-  /* z-index: 1500; */
+  margin: 0.4vw 0.4vw;
 }
 
 /* §§ ---------- MESSAGES & TURN INDICATOR----------------*/
 
 #logo-button-box .waiting-msg {
   text-align: center;
-  animation: pulseMessage 2s infinite linear;
   position: relative;
   bottom: 15%;
+  animation: pulseMessage 2s infinite linear;
 }
 
 #construction-area .message {
-  align-self: flex-start;
   position: absolute;
-  margin-top: 10px;
+  align-self: flex-start;
+  margin-top: 0.4vw;
   /* font-size: 36px; */
   font-size: 2vw;
-  /* position: absolute;
-    top: 10px;
-    right: 100px; */
   animation: floatMessage 4s infinite linear;
 }
 
@@ -727,13 +644,13 @@ button:focus {
 @keyframes floatMessage {
   0%,
   100% {
-    transform: translateX(0px);
+    transform: translateX(0vw);
   }
   25% {
-    transform: translateX(-20px);
+    transform: translateX(-1.5vw);
   }
   75% {
-    transform: translateX(20px);
+    transform: translateX(1.5vw);
   }
 }
 
@@ -749,53 +666,55 @@ button:focus {
 
 #construction-area #rounds {
   position: absolute;
-  top: 14px;
-  right: 14px;
+  top: 0.5vw;
+  right: 0.5vw;
 }
 
 /* §§ INSTRUCTIONS --------------------- */
 #instructions {
   position: absolute;
-  top: 0px;
+  top: 0;
   left: 0;
-  margin: 5px;
+  margin: 0.3vw;
   background-color: rgba(255, 255, 255, 0.9);
-  border-radius: 10px;
-  padding: 8px;
+  border-radius: 1vw;
+  padding: 0.5vw;
   z-index: 1000;
 }
 
 #instructions h3 {
-  margin: 0 0 12px 0;
-  font-size: 30px;
+  margin: 0 0 1.5% 0;
+  font-size: 1.7vw;
+  font-weight: 800;
 }
 
 #instructions ul {
-  margin: 8px 0px;
+  margin: 1% 0%;
+  padding-inline-start: 1.5vw;
 }
 
 #instructions li {
-  margin-bottom: 4px;
-  font-size: 24px;
+  margin-bottom: 0.65%;
+  font-size: 1.35vw;
 }
 
 #instructions p {
   margin: 0;
   font-weight: bold;
+  font-size: 1.55vw;
 }
 
 #instructions span {
   font-weight: bold;
   color: white;
   background-color: black;
-  border-radius: 6px;
-  padding: 2px 6px;
+  border-radius: 0.4vw;
+  padding: 0.11vw 0.32vw;
 }
 
 /* §§ ----------- CARDS --------------------- */
 #card-deck {
   position: relative;
-  /* min-width: 440px; */
 }
 
 .wordcard {
@@ -804,53 +723,36 @@ button:focus {
   justify-content: flex-start;
   align-items: flex-start;
   font-weight: 700;
-  /* min-width: 450px; */
-  /* max-width: 480px; */
   touch-action: manipulation;
 }
 
-.cardtitle {
-  /* padding-left: 0.2rem; */
-  /* font-size: 32px; */
-  font-size: 1.8vw;
-  margin-top: 0;
-  /* margin-bottom: 6px; */
-  margin-bottom: 0.3vw;
-  font-weight: 800;
-  align-items: center;
-  /* height: 80px; */
-  height: 4.5vw;
-}
-
-.table-row,
-.cardtitle {
-  display: flex;
-  width: 100%;
+.cardtitle,
+.table-row {
   /* to allow the guesses-box to position itself to the right:  */
   position: relative;
-  /* align-items: center; */
-  /* margin-bottom: 6px; */
-  margin-bottom: 0.2vw;
+  display: flex;
+  width: 100%;
+  margin-bottom: 1%;
 }
 
-/* .table-row {
-    border-radius: 10px;
-    padding: 10px 4px 5px 8px;
-} */
+.cardtitle {
+  height: 4.5vw;
+  font-size: 1.8vw;
+  margin-top: 0;
+  font-weight: 800;
+  align-items: center;
+}
 
 .table-row:hover {
   cursor: pointer;
 }
 
 .highlight {
-  display: flex;
   position: relative;
+  display: flex;
   /* leave space for "guess markers" next to card item/word: */
   max-width: 90%;
-  /* padding: 8px 5px; */
   padding: 0.4vw 0.4vw;
-  /* border-radius: 10px; */
-  /* border-width: 3px; */
   border-radius: 1vw;
   border-width: 0.15vw;
   border-style: solid;
@@ -869,8 +771,6 @@ button:focus {
 .bullet,
 .item {
   vertical-align: top;
-  /* padding-top: 0.8rem; */
-  /* font-size: 29px; */
   font-size: 1.6vw;
 }
 
@@ -878,38 +778,32 @@ button:focus {
   font-weight: 800;
   letter-spacing: 0.1em;
   text-align: end;
-  /* width: 25px; */
   width: 1.7vw;
 }
 
 .item {
-  /* padding-left: 0.5rem; */
   padding-left: 0.4vw;
   text-align: start;
   /* width: 92%; */
   font-weight: 700;
 }
 
-/* small or strong text on cards */
+/* smaller text on cards */
 small {
   /* font-size: 22px; */
-  font-size: 1.3vw;
+  font-size: 1.2vw;
 }
 
 .guesses {
-  display: flex;
   position: absolute;
+  display: flex;
   right: 0vw;
   align-items: center;
   justify-content: flex-end;
-  /* margin-left: 10px; */
-  /* padding-top: 10px; */
   padding-top: 0.7vw;
 }
 
 .guess {
-  /* height: 26px; */
-  /* width: 26px; */
   height: 1.6vw;
   width: 1.6vw;
   border-radius: 50%;
@@ -920,14 +814,14 @@ small {
 
 /* §§ ----------POINTS-------------- */
 #points-container {
+  position: relative;
   display: flex;
   flex-direction: column;
-  position: relative;
 }
 
 #points-container h3 {
-  margin-top: 0px;
-  margin-bottom: 8px;
+  margin-top: 0;
+  margin-bottom: 1.5%;
   font-weight: 800;
   /* font-size: 30px; */
   font-size: 1.6vw;
@@ -941,8 +835,6 @@ small {
 }
 
 .points {
-  /* height: 40px; */
-  /* width: 40px; */
   height: 2.1vw;
   width: 2.1vw;
   border-width: 3px;
@@ -1141,7 +1033,7 @@ small {
   }
 }
 
-/* siegertreppchen: ----------------------*/
+/* §§ -------- siegertreppchen: -----------------*/
 /* #players-end {
     width: 580px;
     display: flex;
@@ -1166,13 +1058,13 @@ small {
 
 .img-box {
   text-align: center;
-  margin: 2px;
-  z-index: 1;
+  margin: 0.1vw;
   touch-action: manipulation;
+  z-index: 1;
 }
 
 #queue .img-box {
-  max-height: 90%;
+  height: 90%;
   width: auto;
   margin-left: 1.5%;
   z-index: 0;
@@ -1186,7 +1078,7 @@ small {
   cursor: pointer;
 }
 
-/* §§ styles for particular objects: */
+/* §§ ----- STYLES FOR PARTICULAR OBJECTS --------- */
 .banana {
   height: 60px;
   width: auto;
@@ -1782,7 +1674,7 @@ small {
   clip-path: polygon(-10% 110%, 45% 0%, 50% 0%, 107% 96%);
 }
 
-/* §§ object items in main-game: */
+/* §§ ------- OBJECTS in MAIN GAME ------------- */
 #objects .banana {
   height: 6.7%;
 }
