--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -213,7 +213,7 @@ header {
   bottom: 0%;
   width: 100%;
   overflow-x: hidden;
-  height: 30%;
+  height: 16vw;
 }
 
 #ticker-objects {
@@ -224,7 +224,7 @@ header {
   left: 0;
   white-space: nowrap;
   font-size: 0; /* to remove white space between the ticker elements, that causes ticker to jump in the first round*/
-  height: 30vh;
+  height: 16vw;
 }
 
 #ticker-objects .img-box img:hover {
@@ -325,6 +325,11 @@ header {
   cursor: pointer;
   transform: scale(1.2);
   border-style: solid;
+}
+
+.player-name {
+  /* click through the "?" to the underlying player piece: */
+  pointer-events:none;
 }
 
 /* font sizes depending on length of player name: */
@@ -529,14 +534,16 @@ header {
 }
 
 .stuff-logo h1 {
-  font-size: 13.2vh;
+  /* font-size: 13.2vh; */
+  font-size: 7vw;
   font-weight: 800;
   margin-top: 0;
   margin-bottom: 0;
 }
 
 .stuff-logo h2 {
-  font-size: 8.3vh;
+  /* font-size: 8.3vh; */
+  font-size: 4.4vw;
   font-weight: 700;
   margin-top: 0;
   margin-bottom: 0;
@@ -1080,7 +1087,8 @@ small {
 
 /* §§ ----- STYLES FOR PARTICULAR OBJECTS --------- */
 .banana {
-  height: 60px;
+  /* height: 60px; */
+  height: 3.2vw;
   width: auto;
   clip-path: polygon(
     -2% 50%,
@@ -1099,7 +1107,8 @@ small {
   );
 }
 .bridge {
-  height: 100px;
+  /* height: 100px; */
+  height: 5.2vw;
   width: auto;
 }
 .bridge.v1 {
@@ -1127,13 +1136,16 @@ small {
   );
 }
 .bridge.v2 {
-  height: 66px;
+  /* height: 66px; */
+  height: 3.5vw;
 }
 .bridge.v3 {
-  height: 86px;
+  /* height: 86px; */
+  height: 4.5vw;
 }
 .cloth {
-  height: 270px;
+  /* height: 270px; */
+  height: 14vw;
   width: auto;
 }
 .cloth.v1 {
@@ -1149,7 +1161,8 @@ small {
   );
 }
 .cloth.v2 {
-  height: 200px;
+  /* height: 200px; */
+  height: 10.4vw;
   clip-path: polygon(
     19% 25%,
     37% 28%,
@@ -1165,11 +1178,13 @@ small {
   );
 }
 .cloth.v3 {
-  height: 270px;
+  /* height: 270px; */
+  height: 14vw;
   clip-path: polygon(0 0, 94% 0, 100% 100%, 0% 100%);
 }
 .coin {
-  height: 100px;
+  /* height: 100px; */
+  height: 5.1vw;
   width: auto;
 }
 .coin.v1,
@@ -1177,14 +1192,16 @@ small {
   clip-path: circle(50% at center);
 }
 .flower {
-  height: 170px;
+  /* height: 170px; */
+  height: 8.9vw;
   width: auto;
 }
 .flower.v1 {
   clip-path: circle(52% at 51% 51%);
 }
 .flower.v2 {
-  height: 50px;
+  /* height: 50px; */
+  height: 2.6vw;
   clip-path: polygon(
     0% 42%,
     2% 40%,
@@ -1258,7 +1275,8 @@ small {
 }
 
 .fur {
-  height: 200px;
+  /* height: 200px; */
+  height: 10.3vw;
   width: auto;
   clip-path: polygon(
     38% -1%,
@@ -1274,7 +1292,8 @@ small {
   );
 }
 .giant {
-  height: 200px;
+  /* height: 200px; */
+  height: 10.4vw;
   width: auto;
 }
 .giant.v1 {
@@ -1354,14 +1373,16 @@ small {
 }
 
 .peg {
-  height: 120px;
+  /* height: 120px; */
+  height: 6.3vw;
   width: auto;
 }
 .peg.v1 {
   clip-path: polygon(8% -2%, 100% 64%, 100% 70%, 62% 59%, 115% 121%, -1% 29%);
 }
 .peg.v2 {
-  height: 110px;
+  /* height: 110px; */
+  height: 5.8vw;
   clip-path: polygon(
     11% 0%,
     13% -1%,
@@ -1390,7 +1411,8 @@ small {
   );
 }
 .pig {
-  height: 90px;
+  /* height: 90px; */
+  height: 4.7vw;
   width: auto;
 }
 .pig.v1 {
@@ -1429,13 +1451,14 @@ small {
   );
 }
 .pig.v2 {
-  height: 90px;
+
 }
 .pig.v3 {
-  height: 90px;
+
 }
 .plane {
-  height: 160px;
+  /* height: 160px; */
+  height: 8.2vw;
   width: auto;
 }
 .plane.v1 {
@@ -1469,22 +1492,27 @@ small {
   );
 }
 .plane.v2 {
-  height: 100px;
+  /* height: 100px; */
+  height: 5.2vw;
 }
 .plane.v3 {
-  height: 100px;
+  /* height: 100px; */
+  height: 5.2vw;
 }
 .pokerchip {
-  height: 90px;
+  /* height: 90px; */
+  height: 4.7vw;
   width: auto;
 }
 .pole {
-  height: 170px;
+  /* height: 170px; */
+  height: 8.9vw;
   width: auto;
   clip-path: polygon(99% -2%, 102% 5%, 0% 103%, -2% 94%);
 }
 .puzzle {
-  height: 170px;
+  /* height: 170px; */
+  height: 8.9vw;
   width: auto;
 }
 .puzzle.v1 {
@@ -1536,7 +1564,8 @@ small {
   );
 }
 .puzzle.v2 {
-  height: 165px;
+  /* height: 165px; */
+  height: 8.6vw;
   clip-path: polygon(
     5% 25%,
     34% 25%,
@@ -1585,22 +1614,25 @@ small {
   );
 }
 .ring {
-  height: 95px;
+  /* height: 95px; */
+  height: 4.9vw;
   width: auto;
 }
 .ring.v1 {
   clip-path: circle(50% at center);
 }
 .ring.v2 {
-  height: 51px;
+  height: 2.6vw;
   clip-path: ellipse(51% 54% at 50% 49%);
 }
 .rummikubtile {
-  height: 150px;
+  /* height: 150px; */
+  height: 7.8vw;
   width: auto;
 }
 .scissors {
-  height: 100px;
+  /* height: 100px; */
+  height: 5.3vw;
   width: auto;
   clip-path: polygon(
     0% 29%,
@@ -1633,7 +1665,8 @@ small {
   );
 }
 .stone {
-  height: 90px;
+  /* height: 90px; */
+  height: 4.7vw;
   width: auto;
   clip-path: polygon(
     -2% 63%,
@@ -1655,11 +1688,13 @@ small {
   );
 }
 .ticket {
-  height: 190px;
+  /* height: 190px; */
+  height: 9.8vw;
   width: auto;
 }
 .token {
-  height: 110px;
+  /* height: 110px; */
+  height: 5.6vw;
   width: auto;
 }
 .token.v1 {
@@ -1669,13 +1704,14 @@ small {
   clip-path: ellipse(51% 51% at 50% 50%);
 }
 .triangle {
-  height: 110px;
+  /* height: 110px; */
+  height: 5.6vw;
   width: auto;
   clip-path: polygon(-10% 110%, 45% 0%, 50% 0%, 107% 96%);
 }
 
 /* §§ ------- OBJECTS in MAIN GAME ------------- */
-#objects .banana {
+/* #objects .banana {
   height: 6.7%;
 }
 #objects .bridge {
@@ -1770,12 +1806,13 @@ small {
 }
 #objects .triangle {
   height: 12%;
-}
+} */
 
 #ticker-objects .img-box {
   position: relative;
   display: inline-block;
-  padding-left: 22px;
+  /* padding-left: 22px; */
+  padding-left: 1.2vw;
   /* ticker only runs smoothly without any margins: */
   margin: 0;
   /* text-align: center; */
