--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -90,32 +90,34 @@ header {
 }
 
 #main-game {
+  position: relative;
+  display: flex;
   height: 100%;
   width: 100%;
-  display: flex;
   flex-shrink: 0;
   /* align-items: flex-end; */
-  position: relative;
+  /* to fit in the queue of waiting objects: */
+  padding-bottom: 5vw;
 }
 
 #main-left-center {
   position: relative;
   display: flex;
-  flex-direction: column;
-  /* flex-grow: 1; */
-  flex-shrink: 0;
-  height: 91%;
+  /* height: 91%; */
   /* width: 60%; */
   width: 63vw;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-shrink: 0;
   /* justify-content: flex-end; */
   justify-content: center;
 }
 
 #main-right {
   display: flex;
-  /* flex-grow: 1; */
+  /* height: 91%; */
+  flex-grow: 1;
   flex-shrink: 0;
-  height: 91%;
   /* width: 40%; */
   width: 37vw;
   padding: 8px;
@@ -166,7 +168,8 @@ header {
   flex-shrink: 0;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 0.15vw;
+  /* padding: 0.15vw; */
+  padding: 0.5vw 0.15vw 0.15vw 0.15vw;
   border: 0.15vw lightgrey dashed;
   border-radius: 1.3vw;
 }
@@ -174,17 +177,20 @@ header {
   position: absolute;
   display: flex;
   flex-direction: row;
+  /* height: 9%; */
+  height: 5vw;
   width: 100%;
-  height: 9%;
   bottom: 0;
   justify-content: flex-end;
+  align-items: center;
   border-top: 0.15vw black dashed;
   padding: 0.2% 1%;
 }
 
 #queue-overlay {
   position: absolute;
-  height: 9%;
+  /* height: 9%; */
+  height: 5vw;
   width: 100%;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
@@ -1080,7 +1086,8 @@ small {
 }
 
 #queue .img-box {
-  height: 90%;
+  /* height: 90%; */
+  height: 4vw;
   width: auto;
   margin: 0;
   margin-left: 1.5%;
