--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -105,7 +105,7 @@ header {
   display: flex;
   /* height: 91%; */
   /* width: 60%; */
-  width: 63vw;
+  width: 64vw;
   flex-direction: column;
   flex-grow: 1;
   flex-shrink: 0;
@@ -119,7 +119,7 @@ header {
   flex-grow: 1;
   flex-shrink: 0;
   /* width: 40%; */
-  width: 37vw;
+  width: 36vw;
   padding: 8px;
   /* align-items: flex-end; */
   align-items: center;
@@ -139,10 +139,9 @@ header {
 #card-points {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  flex-grow: 1;
   height: 38vw;
-  /* width: 15vw; */
+  flex-grow: 1;
+  justify-content: space-between;
   padding-right: 0.4vw;
 }
 
@@ -162,14 +161,19 @@ header {
 #objects {
   position: relative;
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
+  flex-direction: row-reverse;
   height: 47vw;
   width: 100%;
   flex-shrink: 0;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
+  flex-wrap: wrap-reverse;
   justify-content: space-around;
+  align-content: space-around;
+  align-items: flex-start;
   /* padding: 0.15vw; */
-  padding: 0.5vw 0.15vw 0.15vw 0.15vw;
+  /* padding: 0.4vw 0.4vw 0.15vw 0.15vw; */
+  padding: 0.15vw 0.4vw 0.4vw 0.15vw;
   border: 0.15vw lightgrey dashed;
   border-radius: 1.3vw;
 }
@@ -1080,7 +1084,8 @@ small {
 
 .img-box {
   text-align: center;
-  margin: 0.1vw;
+  /* margin: 0.1vw; */
+  margin: 0.3vw;
   touch-action: manipulation;
   z-index: 1;
 }
