--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -116,11 +116,12 @@ header {
 #main-right {
   display: flex;
   /* height: 91%; */
-  flex-grow: 1;
+  /* flex-grow: 1; */
   flex-shrink: 0;
   /* width: 40%; */
   width: 36vw;
-  padding: 8px;
+  /* padding: 8px; */
+  padding: 0.5vw;
   /* align-items: flex-end; */
   align-items: center;
   /* justify-content: space-between; */
@@ -131,7 +132,8 @@ header {
   justify-content: space-between;
   width: 100%;
   /* height: 82%; */
-  padding: 8px 0px 8px 12px;
+  /* padding: 8px 0px 8px 12px; */
+  padding: 0.5vw 0vw 0.5vw 1vw;
   align-items: flex-end;
   position: relative;
 }
@@ -142,20 +144,21 @@ header {
   height: 38vw;
   flex-grow: 1;
   justify-content: space-between;
-  padding-right: 0.4vw;
+  padding-right: 0.6vw;
 }
 
 #construction-area {
   position: relative;
   display: flex;
-  justify-content: center;
   height: 38vw;
   width: 36vw;
   border-width: 0.15vw;
   border-style: dashed;
   border-radius: 1.3vw;
+  justify-content: center;
   align-items: flex-end;
   flex-shrink: 0;
+  flex-grow: 0;
 }
 
 #objects {
@@ -834,7 +837,7 @@ small {
   width: 1.6vw;
   border-radius: 50%;
   border-style: solid;
-  border-width: 2px;
+  border-width: 0.15vw;
   margin-left: 0.2vw;
 }
 
@@ -863,12 +866,12 @@ small {
 .points {
   height: 2.1vw;
   width: 2.1vw;
-  border-width: 3px;
+  border-width: 0.2vw;
   border-style: solid;
   border-radius: 50%;
   border-color: transparent;
   text-align: center;
-  margin: 0 10px;
+  margin: 0 0.5vw;
 }
 
 /* §§ --------CROWN FOR THE WINNER: -------------*/
