--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -395,14 +395,14 @@ header {
   position: relative;
 }
 
-#joined-players .player-name,
-#players-end .player-name {
+/* #players-end .player-name, */
+#joined-players .player-name {
   position: relative;
   bottom: 9%;
 }
 
-#joined-players .player-points,
-#players-end .player-points {
+/* #players-end .player-points, */
+#joined-players .player-points {
   position: absolute;
   bottom: 6%;
   transition: transform 0.3s ease-out;
@@ -434,15 +434,25 @@ header {
 #players-end .player {
   border-style: solid;
   color: black;
+  height: 4vw;
+  width: 10vw;
+  flex-direction: row;
+  border-radius: 1vw;
+}
+
+#players-end .player-name {
+  margin-right: 1vw;
 }
 
 #players-end .player:hover {
   cursor: unset;
 }
 
+/* TODO: replace scale() with heights in vw */
 #players-end .player:first-child {
   transform: scale(1.3);
-  margin-bottom: 4vh;
+  /* margin-bottom: 4vh; */
+  margin-bottom: 3vh;
   animation: pulse 2s infinite linear;
   /* border-style: groove; */
   /* border-width: 10px; */
@@ -1117,9 +1127,11 @@ small {
 .banana {
   /* height: 60px; */
   /* height: 3.2vw; */
-  height: 2.88vw;
+  /* height: 2.88vw; */
+  /* TODO: clip-path new rotated banana image*/
+  height: 4vw;
   width: auto;
-  clip-path: polygon(
+  /* clip-path: polygon(
     -2% 50%,
     10% 35%,
     61% 37%,
@@ -1133,7 +1145,8 @@ small {
     37% 100%,
     12% 86%,
     4% 74%
-  );
+  ); */
+
 }
 .bridge {
   /* height: 100px; */
