--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -57,6 +57,7 @@ body {
   z-index: 100;
 }
 
+/* TODO: remove header and restyle start-menu */
 header {
   display: flex;
   flex-direction: column;
@@ -74,6 +75,7 @@ header {
   width: 100%;
   flex-grow: 1;
   justify-content: space-between;
+  padding-top: 1.2vw;
 }
 
 #logo-button-box {
@@ -208,9 +210,10 @@ header {
 }
 
 #game-end {
-  position: absolute;
   display: flex;
+  position: absolute;
   height: 100%;
+  min-height: 42vw;
   width: 100%;
   top: 0;
   left: 0;
@@ -221,6 +224,7 @@ header {
 
 #play-again-box {
   width: 20%;
+  transform: translateX(2vw);
 }
 
 #sound-on,
@@ -427,17 +431,19 @@ header {
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-right: 6vw;
-  padding-top: 6%;
+  /* margin-right: 6vw; */
+  justify-content: center;
 }
 
 #players-end .player {
   border-style: solid;
   color: black;
-  height: 4vw;
+  height: 3.5vw;
   width: 10vw;
   flex-direction: row;
   border-radius: 1vw;
+  margin-bottom: 1.2vw;
+  padding: 0 0.5vw;
 }
 
 #players-end .player-name {
@@ -446,13 +452,13 @@ header {
 
 #players-end .player:hover {
   cursor: unset;
+  transform: unset;
 }
 
-/* TODO: replace scale() with heights in vw */
 #players-end .player:first-child {
-  transform: scale(1.3);
+  transform: scale(1.1);
   /* margin-bottom: 4vh; */
-  margin-bottom: 3vh;
+  margin-bottom: 1.7vw;
   animation: pulse 2s infinite linear;
   /* border-style: groove; */
   /* border-width: 10px; */
@@ -461,41 +467,39 @@ header {
 @keyframes pulse {
   0%,
   100% {
-    transform: scale(1.3);
+    transform: scale(1.1);
   }
   50% {
-    transform: scale(1.5);
+    transform: scale(1.3);
   }
 }
 
 #players-end .player:nth-child(2) {
-  transform: scale(1.1);
-  margin-bottom: 1.8vh;
+  transform: translateX(-2vw);
 }
 
 #players-end .player:nth-child(3) {
-  transform: scale(1);
-  margin-bottom: 0.5vh;
+  transform: translateX(-3.5vw);
 }
 
 #players-end .player:nth-child(4) {
-  transform: scale(0.9);
+  transform: translateX(-5vw);
 }
 
 #players-end .player:nth-child(5) {
-  transform: scale(0.8) translateY(-1vh);
+  transform: translateX(-6.5vw);
 }
 
 #players-end .player:nth-child(6) {
-  transform: scale(0.75) translateY(-3.4vh);
+  transform: translateX(-8vw);
 }
 
 #players-end .player:nth-child(7) {
-  transform: scale(0.7) translateY(-7vh);
+  transform: translateX(-9.5vw);
 }
 
 #players-end .player:nth-child(8) {
-  transform: scale(0.65) translateY(-12vh);
+  transform: translateX(-11vw);
 }
 
 /* §§ --------CROWN / game master indicator------- */
@@ -563,7 +567,8 @@ header {
 
 /* §§ ----------AllThatStuff LOGO------------- */
 .stuff-logo {
-  padding: 10% 8%;
+  /* padding: 10% 8%; */
+  padding: 1.2vw;
   /* font-family: "Life Savers", cursive; */
   text-align: center;
 }
@@ -736,14 +741,14 @@ button:focus {
 }
 
 #instructions li {
-  margin-bottom: 0.65%;
-  font-size: 1.35vw;
+  margin-bottom: 0.2vw;
+  font-size: 1.2vw;
 }
 
 #instructions p {
   margin: 0;
   font-weight: bold;
-  font-size: 1.55vw;
+  font-size: 1.4vw;
 }
 
 #instructions span {
@@ -751,7 +756,7 @@ button:focus {
   color: white;
   background-color: black;
   border-radius: 0.4vw;
-  padding: 0.11vw 0.32vw;
+  padding: 0.07vw 0.3vw;
 }
 
 /* §§ ----------- CARDS --------------------- */
@@ -885,6 +890,7 @@ small {
   border-color: transparent;
   text-align: center;
   margin: 0 0.5vw;
+  padding-top: 0.1vw;
 }
 
 /* §§ --------CROWN FOR THE WINNER: -------------*/
@@ -1128,9 +1134,6 @@ small {
   /* height: 60px; */
   /* height: 3.2vw; */
   /* height: 2.88vw; */
-  /* TODO: clip-path new rotated banana image*/
-  height: 4vw;
-  width: auto;
   /* clip-path: polygon(
     -2% 50%,
     10% 35%,
@@ -1146,6 +1149,10 @@ small {
     12% 86%,
     4% 74%
   ); */
+  /* new banana picture: */
+  height: 5.6vw;
+  width: auto;
+  clip-path: polygon(52% 49%, 73% 32%, 87% 14%, 89% 1%, 98% 0%, 98% 16%, 100% 32%, 99% 46%, 85% 66%, 50% 90%, 30% 98%, 16% 100%, 6% 99%, 0% 91%, 3% 81%, 11% 72%, 30% 62%);
 
 }
 .bridge {
