--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -20,7 +20,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
-  min-height: 48vw;
+  min-height: 50vw;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -49,33 +49,33 @@ body {
 
 /* §§ ---------GENERAL LAYOUT------------- */
 #start-menu {
-  position: absolute;
+  /* position: absolute;
   top: 0;
-  left: 0;
+  left: 0; */
+  position: relative;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 100%;
+  flex-shrink: 0;
+  padding-bottom: 16vw;
   z-index: 100;
 }
 
-/* TODO: remove header and restyle start-menu */
-header {
+#select-players {
   display: flex;
-  flex-direction: column;
   width: 100%;
-  height: 70%;
-  padding-top: 2%;
-  padding-right: 1.5vw;
-  padding-left: 1.5vw;
-  font-family: "Life Savers", cursive;
-  align-items: center;
+  height: 12vw;
+  justify-content: space-between;
+  padding: 2vw;
 }
 
-#start-menu-main {
+#start-menu-middle {
   display: flex;
   width: 100%;
   flex-grow: 1;
   justify-content: space-between;
-  padding-top: 1.2vw;
+  padding: 1vw 2vw;
 }
 
 #logo-button-box {
@@ -95,11 +95,14 @@ header {
 }
 
 #main-game {
-  position: relative;
+  position: absolute;
   display: flex;
   height: 100%;
+  min-height: 48vw;
   width: 100%;
   flex-shrink: 0;
+  top: 0;
+  left: 0;
   /* align-items: flex-end; */
   /* to fit in the queue of waiting objects: */
   padding-bottom: 5vw;
@@ -130,6 +133,15 @@ header {
   /* align-items: flex-end; */
   align-items: center;
   /* justify-content: space-between; */
+}
+
+#joined-players {
+  display: flex;
+  width: 100%;
+  height: 9vw;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 1.1vw;
 }
 
 #card-points-construction {
@@ -238,15 +250,18 @@ header {
 
 /* §§ ----------OBJECT TICKER------------------ */
 #ticker {
-  position: fixed;
+  /* position: fixed; */
+  position: absolute;
   bottom: 0%;
   width: 100%;
   overflow-x: hidden;
   height: 16vw;
+  flex-shrink: 0;
 }
 
 #ticker-objects {
-  position: fixed;
+  /* position: fixed; */
+  position: absolute;
   display: flex;
   align-items: center;
   bottom: 0px;
@@ -302,24 +317,6 @@ header {
 }
 
 /* §§ -------------PLAYER PIECES-------------- */
-
-#select-players {
-  display: flex;
-  width: 100%;
-  height: 8vw;
-  justify-content: space-between;
-}
-
-#joined-players {
-  display: flex;
-  width: 100%;
-  /* height: 18%; */
-  height: 9vw;
-  justify-content: space-around;
-  align-items: center;
-  /* padding-top: 20px; */
-  padding-top: 1.1vw;
-}
 
 .player {
   position: relative;
@@ -438,7 +435,7 @@ header {
 #players-end .player {
   border-style: solid;
   color: black;
-  height: 3.5vw;
+  height: 3.1vw;
   width: 10vw;
   flex-direction: row;
   border-radius: 1vw;
@@ -730,13 +727,13 @@ button:focus {
 }
 
 #instructions h3 {
-  margin: 0 0 1.5% 0;
+  margin: 0 0 0.3vw 0;
   font-size: 1.7vw;
   font-weight: 800;
 }
 
 #instructions ul {
-  margin: 1% 0%;
+  margin: 0.3vw 0;
   padding-inline-start: 1.5vw;
 }
 
